--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
     <!-- Header Section End -->
 
     <!-- Hero Section Begin -->
-    <section class="hero" style="background-image: url('img/hero_1_a.jpg');">
+    <section class="hero" style="height:600px;background-image: url('img/hero_1_a.jpg');">
         <div class="container">
-            <div class="row align-items-center justify-content-center">
+            <div class="row ">
               <div class="col-lg-10">
   
                 <div class="row mb-5">
