--- a/car.html
+++ b/car.html
@@ -70,7 +70,7 @@
     </header>
     <!-- Header Section End -->
 
-    <!-- Breadcrumb End -->
+    <!-- Breadcrumb End --
     <div class="breadcrumb-option set-bg" data-setbg="img/breadcrumb-bg.jpg">
         <div class="container">
             <div class="row">
