--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="HVAC, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HVAC | Template</title>
+    <title>caRent</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
@@ -41,7 +41,9 @@
             <div class="row">
                 <div class="col-lg-2">
                     <div class="header__logo">
-                        <a href="./index.html"><img src="img/logo.png" alt=""></a>
+                        <strong>
+                            <a href="./index.html">CaRent</a>
+                        </strong>
                     </div>
                 </div>
                 <div class="col-lg-10">
@@ -70,7 +72,7 @@
     </header>
     <!-- Header Section End -->
 
-    <!-- Breadcrumb End -->
+    <!-- Breadcrumb End 
     <div class="breadcrumb-option set-bg" data-setbg="img/breadcrumb-bg.jpg">
         <div class="container">
             <div class="row">
