--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
 
     <!-- Header Section Begin -->
     <header class="header">
-        
         <div class="container">
             <div class="row">
                 <div class="col-lg-2">
@@ -204,8 +203,8 @@
             </div>
             <div class="row car-filter">
                 <div class=" col-lg-3 col-md-4 col-sm-6 mix">
-                    <div class="car__item ">
-                        <div class="car__item__pic__slider owl-carousel m9anta">
+                    <div class="car__item">
+                        <div class="car__item__pic__slider owl-carousel">
                             <img src="img/cars/car-1.jpg" alt="">
                             <img src="img/cars/car-8.jpg" alt="">
                             <img src="img/cars/car-6.jpg" alt="">
@@ -214,7 +213,7 @@
                         <div class="car__item__text">
                             <div class="car__item__text__inner">
                                 <div class="label-date">2016</div>
-                                <h5><a href="#">Porsche cayenne turbo s</a></h5>
+                                <h5><a href="car-details.html">Porsche cayenne turbo s</a></h5>
                                 <ul>
                                     <li><span>35,000</span> mi</li>
                                     <li>Auto</li>
@@ -223,7 +222,7 @@
                             </div>
                             <div class="car__item__price">
                                 <span class="car-option">For Rent</span>
-                                <h6>$218<span>/Day</span></h6>
+                                <h6>$218<span>/Month</span></h6>
                             </div>
                         </div>
                     </div>
