--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
     </header>
     <!-- Header Section End -->
 
-    <!-- Breadcrumb End -->
+    <!-- Breadcrumb End 
     <div class="breadcrumb-option set-bg" data-setbg="img/breadcrumb-bg.jpg">
         <div class="container">
             <div class="row">
@@ -96,7 +96,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title about-title">
-                        <h2>Wellcome To HVAC Auto Online <br />We Provide Everything You Need To A Car</h2>
+                        <h2>Wellcome To CaRent Auto Online <br />We Provide Everything You Need To Get You the best Car You're looking For!</h2>
                         <p>First I will explain what contextual advertising is. Contextual advertising means the
                             advertising of products on a website according to<br /> the content the page is displaying.
                             For example if the content of a website was information on a Ford truck then the
@@ -204,7 +204,7 @@
     </section>
     <!-- Call Section End -->
 
-    <!-- Team Section Begin -->
+    <!-- Team Section Begin
     <section class="team spad">
         <div class="container">
             <div class="row">
@@ -263,7 +263,7 @@
             </div>
         </div>
     </section>
-    <!-- Team Section End -->
+    <!--Team Section End -->
 
     <!-- Testimonial Section Begin -->
     <section class="testimonial spad">
@@ -472,8 +472,8 @@
                     </div>
                     <div class="col-lg-6 col-md-6">
                         <div class="footer__contact__option">
-                            <div class="option__item"><i class="fa fa-phone"></i> (+12) 345 678 910</div>
-                            <div class="option__item email"><i class="fa fa-envelope-o"></i> Colorlib@gmail.com</div>
+                            <div class="option__item"><i class="fa fa-phone"></i> (+212) 000 678 910</div>
+                            <div class="option__item email"><i class="fa fa-envelope-o"></i> Carent@gmail.com</div>
                         </div>
                     </div>
                 </div>
@@ -482,7 +482,7 @@
                 <div class="col-lg-4 col-md-4">
                     <div class="footer__about">
                         <div class="footer__logo">
-                            <a href="#"><img src="img/footer-logo.png" alt=""></a>
+                            <a href="#"><strong style="color: #db2d2e;font-size: 29px;">CaRent</strong></a>
                         </div>
                         <p>Any questions? Let us know in store at 625 Gloria Union, California, United Stated or call us
                             on (+1) 96 123 8888</p>
@@ -534,12 +534,7 @@
                     </div>
                 </div>
             </div>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            <div class="footer__copyright__text">
-                <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></p>
             </div>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-        </div>
     </footer>
     <!-- Footer Section End -->
 
