--- a/car.html
+++ b/car.html
@@ -36,19 +36,20 @@
 
     <!-- Header Section Begin -->
     <header class="header">
-        
         <div class="container">
             <div class="row">
                 <div class="col-lg-2">
                     <div class="header__logo">
-                        <a href="./index.html"><img src="img/logo.png" alt=""></a>
+                        <strong>
+                            <a href="./index.html">CaRent</a>
+                        </strong>
                     </div>
                 </div>
                 <div class="col-lg-10">
                     <div class="header__nav">
                         <nav class="header__menu">
                             <ul>
-                                <li ><a href="./index.html">Home</a></li>
+                                <li><a href="./index.html">Home</a></li>
                                 <li class="active"><a href="./car.html">Cars</a></li>                                
                                 <li><a href="./about.html">About</a></li>
                                 <li><a href="./contact.html">Contact</a></li>
@@ -216,7 +217,9 @@
                                         </ul>
                                     </div>
                                     <div class="car__item__price">
-                                        <span class="car-option">For Rent</span>
+                                        <a href="car-details.html">
+                                    <span class="car-option btn btn-primary btn btn-primary">Rent</span>
+                                </a>
                                         <h6>$218<span>/Month</span></h6>
                                     </div>
                                 </div>
@@ -233,7 +236,7 @@
                                 <div class="car__item__text">
                                     <div class="car__item__text__inner">
                                         <div class="label-date">2020</div>
-                                        <h5><a href="#">Toyota camry asv50l-jeteku</a></h5>
+                                        <h5><a href="car-details.html">Toyota camry asv50l-jeteku</a></h5>
                                         <ul>
                                             <li><span>35,000</span> mi</li>
                                             <li>Auto</li>
@@ -241,7 +244,9 @@
                                         </ul>
                                     </div>
                                     <div class="car__item__price">
-                                        <span class="car-option sale">For Sale</span>
+                                        <a href="car-details.html">
+                                    <span class="car-option btn btn-primary btn btn-primary">Rent</span>
+                                </a>
                                         <h6>$73,900</h6>
                                     </div>
                                 </div>
@@ -258,7 +263,7 @@
                                 <div class="car__item__text">
                                     <div class="car__item__text__inner">
                                         <div class="label-date">2017</div>
-                                        <h5><a href="#">Bmw s1000rr 2019 m</a></h5>
+                                        <h5><a href="car-details.html">Bmw s1000rr 2019 m</a></h5>
                                         <ul>
                                             <li><span>35,000</span> mi</li>
                                             <li>Auto</li>
@@ -266,7 +271,9 @@
                                         </ul>
                                     </div>
                                     <div class="car__item__price">
-                                        <span class="car-option">For Rent</span>
+                                        <a href="car-details.html">
+                                    <span class="car-option btn btn-primary btn btn-primary">Rent</span>
+                                </a>
                                         <h6>$299<span>/Month</span></h6>
                                     </div>
                                 </div>
@@ -283,7 +290,7 @@
                                 <div class="car__item__text">
                                     <div class="car__item__text__inner">
                                         <div class="label-date">2018</div>
-                                        <h5><a href="#">Audi q8 2020</a></h5>
+                                        <h5><a href="car-details.html">Audi q8 2020</a></h5>
                                         <ul>
                                             <li><span>35,000</span> mi</li>
                                             <li>Auto</li>
@@ -291,7 +298,9 @@
                                         </ul>
                                     </div>
                                     <div class="car__item__price">
-                                        <span class="car-option">For Rent</span>
+                                        <a href="car-details.html">
+                                    <span class="car-option btn btn-primary btn btn-primary">Rent</span>
+                                </a>
                                         <h6>$319<span>/Month</span></h6>
                                     </div>
                                 </div>
@@ -308,7 +317,7 @@
                                 <div class="car__item__text">
                                     <div class="car__item__text__inner">
                                         <div class="label-date">2016</div>
-                                        <h5><a href="#">Mustang shelby gt500</a></h5>
+                                        <h5><a href="car-details.html">Mustang shelby gt500</a></h5>
                                         <ul>
                                             <li><span>35,000</span> mi</li>
                                             <li>Auto</li>
@@ -316,7 +325,9 @@
                                         </ul>
                                     </div>
                                     <div class="car__item__price">
-                                        <span class="car-option sale">For Sale</span>
+                                        <a href="car-details.html">
+                                    <span class="car-option btn btn-primary btn btn-primary">Rent</span>
+                                </a>
                                         <h6>$730,900</h6>
                                     </div>
                                 </div>
@@ -333,7 +344,7 @@
                                 <div class="car__item__text">
                                     <div class="car__item__text__inner">
                                         <div class="label-date">2019</div>
-                                        <h5><a href="#">Lamborghini huracan evo</a></h5>
+                                        <h5><a href="car-details.html">Lamborghini huracan evo</a></h5>
                                         <ul>
                                             <li><span>35,000</span> mi</li>
                                             <li>Auto</li>
@@ -341,7 +352,9 @@
                                         </ul>
                                     </div>
                                     <div class="car__item__price">
-                                        <span class="car-option">For Rent</span>
+                                        <a href="car-details.html">
+                                    <span class="car-option btn btn-primary btn btn-primary">Rent</span>
+                                </a>
                                         <h6>$319<span>/Month</span></h6>
                                     </div>
                                 </div>
@@ -358,7 +371,7 @@
                                 <div class="car__item__text">
                                     <div class="car__item__text__inner">
                                         <div class="label-date">2020</div>
-                                        <h5><a href="#">Lamborghini huracan evo</a></h5>
+                                        <h5><a href="car-details.html">Lamborghini huracan evo</a></h5>
                                         <ul>
                                             <li><span>35,000</span> mi</li>
                                             <li>Auto</li>
@@ -366,7 +379,9 @@
                                         </ul>
                                     </div>
                                     <div class="car__item__price">
-                                        <span class="car-option sale">For Sale</span>
+                                        <a href="car-details.html">
+                                    <span class="car-option btn btn-primary btn btn-primary">Rent</span>
+                                </a>
                                         <h6>$120,000</h6>
                                     </div>
                                 </div>
@@ -383,7 +398,7 @@
                                 <div class="car__item__text">
                                     <div class="car__item__text__inner">
                                         <div class="label-date">2017</div>
-                                        <h5><a href="#">Porsche cayenne turbo s</a></h5>
+                                        <h5><a href="car-details.html">Porsche cayenne turbo s</a></h5>
                                         <ul>
                                             <li><span>35,000</span> mi</li>
                                             <li>Auto</li>
@@ -391,7 +406,9 @@
                                         </ul>
                                     </div>
                                     <div class="car__item__price">
-                                        <span class="car-option">For Rent</span>
+                                        <a href="car-details.html">
+                                    <span class="car-option btn btn-primary btn btn-primary">Rent</span>
+                                </a>
                                         <h6>$319<span>/Month</span></h6>
                                     </div>
                                 </div>
@@ -408,7 +425,7 @@
                                 <div class="car__item__text">
                                     <div class="car__item__text__inner">
                                         <div class="label-date">2020</div>
-                                        <h5><a href="#">Toyota camry asv50l-jeteku</a></h5>
+                                        <h5><a href="car-details.html">Toyota camry asv50l-jeteku</a></h5>
                                         <ul>
                                             <li><span>35,000</span> mi</li>
                                             <li>Auto</li>
@@ -416,7 +433,9 @@
                                         </ul>
                                     </div>
                                     <div class="car__item__price">
-                                        <span class="car-option sale">For sale</span>
+                                        <a href="car-details.html">
+                                    <span class="car-option btn btn-primary btn btn-primary">Rent</span>
+                                </a>
                                         <h6>$73,900</h6>
                                     </div>
                                 </div>
@@ -447,8 +466,8 @@
                     </div>
                     <div class="col-lg-6 col-md-6">
                         <div class="footer__contact__option">
-                            <div class="option__item"><i class="fa fa-phone"></i> (+12) 345 678 910</div>
-                            <div class="option__item email"><i class="fa fa-envelope-o"></i> Colorlib@gmail.com</div>
+                            <div class="option__item"><i class="fa fa-phone"></i> (+212) 000 678 910</div>
+                            <div class="option__item email"><i class="fa fa-envelope-o"></i> Carent@gmail.com</div>
                         </div>
                     </div>
                 </div>
@@ -457,7 +476,7 @@
                 <div class="col-lg-4 col-md-4">
                     <div class="footer__about">
                         <div class="footer__logo">
-                            <a href="#"><img src="img/footer-logo.png" alt=""></a>
+                            <a href="#"><strong style="color: #db2d2e;font-size: 29px;">CaRent</strong></a>
                         </div>
                         <p>Any questions? Let us know in store at 625 Gloria Union, California, United Stated or call us
                             on (+1) 96 123 8888</p>
@@ -509,12 +528,7 @@
                     </div>
                 </div>
             </div>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            <div class="footer__copyright__text">
-                <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></p>
             </div>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-        </div>
     </footer>
     <!-- Footer Section End -->
 
