--- a/contact.html
+++ b/contact.html
@@ -173,8 +173,8 @@
                     </div>
                     <div class="col-lg-6 col-md-6">
                         <div class="footer__contact__option">
-                            <div class="option__item"><i class="fa fa-phone"></i> (+12) 345 678 910</div>
-                            <div class="option__item email"><i class="fa fa-envelope-o"></i> Colorlib@gmail.com</div>
+                            <div class="option__item"><i class="fa fa-phone"></i> (+212) 000 678 910</div>
+                            <div class="option__item email"><i class="fa fa-envelope-o"></i> Carent@gmail.com</div>
                         </div>
                     </div>
                 </div>
@@ -183,7 +183,7 @@
                 <div class="col-lg-4 col-md-4">
                     <div class="footer__about">
                         <div class="footer__logo">
-                            <a href="#"><img src="img/footer-logo.png" alt=""></a>
+                            <a href="#"><strong style="color: #db2d2e;font-size: 29px;">CaRent</strong></a>
                         </div>
                         <p>Any questions? Let us know in store at 625 Gloria Union, California, United Stated or call us
                             on (+1) 96 123 8888</p>
@@ -193,9 +193,6 @@
                             <a href="#" class="google"><i class="fa fa-google"></i></a>
                             <a href="#" class="skype"><i class="fa fa-skype"></i></a>
                         </div>
-                        <p class="footer__copyright__text">Copyright &copy; <script>
-                                document.write(new Date().getFullYear());
-                            </script> <a href="#">Colorlib</a></p>
                     </div>
                 </div>
                 <div class="col-lg-2 offset-lg-1 col-md-3">
@@ -238,7 +235,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+            </div>
     </footer>
     <!-- Footer Section End -->
 
